# ProjectWork-Robot_movement_in_the_environment

./: .gitignore  CMakeLists.txt  README.md  config.cfg  config.json  settings.json  settings_default.json
cmake/: FindGLFW3.cmake
dependencies/glad/: glad.h
src/: config.h  constants.h  glad.c  main.cpp
src/controller/: App.cpp  App.h  AppState.h  ConfigLoader.cpp  ConfigLoader.h  InputManager.cpp  InputManager.h  LidarProcessor.cpp  LidarProcessor.h  MapEditor.cpp  MapEditor.h  Pathfinder.cpp  Pathfinder.h  Scene.cpp  Scene.h
src/model/: CircleObstacle.cpp  CircleObstacle.h  Entity.h  Environment.cpp  Environment.h  Lidar.cpp  Lidar.h  Line.cpp  Line.h  NavGrid.cpp  NavGrid.h  Obstacle.cpp  Obstacle.h  PathEntity.cpp  PathEntity.h  Point.cpp  Point.h  RectObstacle.cpp  RectObstacle.h  Robot.cpp  Robot.h  TargetPoint.cpp  TargetPoint.h
src/shaders/: defaultShader.frag  pointShader.vert  robotShader.frag  shader.frag  shader.vert  wallsShader.frag
src/view/: CircleMesh.cpp  CircleMesh.h  GuiManager.cpp  GuiManager.h  LidarMesh.cpp  LidarMesh.h  LineMesh.cpp  LineMesh.h  Mesh.h  PathMesh.cpp  PathMesh.h  PointMesh.cpp  PointMesh.h  RectMesh.cpp  RectMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
